# Ficaqui-AI

./: .gitignore  Dockerfile  README.md  check_versions.py  find_ftp.py  main.py  requirements.txt  test_osm.py
.github/workflows/: deploy.yml
.streamlit/: config.toml
components/: metrics.py  sidebar.py
data/: Prdio-Localizao-Natureza-Situaodescritanasfontes-Porquefortecandidatoahubtechusomisto.csv  cnefe_centro_aracaju.csv  cnefe_centro_oficial.csv  imoveis.geojson  loader.py
ficaqui_dashboard/: .env.example  app.py  main.py  pyproject.toml  requirements.txt
ficaqui_dashboard/src/: tab_chat.py  tab_map.py  ui_metrics.py
scripts/: aws_guide.md  generate_cnefe.py  generate_geojson.py  preprocess_cnefe.py
utils/: css.py
views/: chat_view.py  map_view.py  report_view.py
